// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test /api/wakatime contract > should match the private missing-username response snapshot 1`] = `
{
  "content": "<svg width="576.5" height="120" viewBox="0 0 576.5 120" fill="#fffefe" xmlns="http://www.w3.org/2000/svg">
    <style>
    .text { font: 600 16px 'Segoe UI', Ubuntu, Sans-Serif; fill: #2f80ed }
    .small { font: 600 12px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    .gray { fill: #858585 }
    </style>
    <rect x="0.5" y="0.5" width="575.5" height="99%" rx="4.5" fill="#fffefe" stroke="#e4e2e2"/>
    <text x="25" y="45" class="text">Something went wrong!</text>
    <text data-testid="message" x="25" y="55" class="text small">
      <tspan x="25" dy="18">This username is not whitelisted</tspan>
      <tspan x="25" dy="18" class="gray">Please deploy your own instance</tspan>
    </text>
    </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=36000, s-maxage=36000, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/wakatime contract > should match the private non-whitelisted username response snapshot 1`] = `
{
  "content": "<svg width="576.5" height="120" viewBox="0 0 576.5 120" fill="#fffefe" xmlns="http://www.w3.org/2000/svg">
    <style>
    .text { font: 600 16px 'Segoe UI', Ubuntu, Sans-Serif; fill: #2f80ed }
    .small { font: 600 12px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    .gray { fill: #858585 }
    </style>
    <rect x="0.5" y="0.5" width="575.5" height="99%" rx="4.5" fill="#fffefe" stroke="#e4e2e2"/>
    <text x="25" y="45" class="text">Something went wrong!</text>
    <text data-testid="message" x="25" y="55" class="text small">
      <tspan x="25" dy="18">This username is not whitelisted</tspan>
      <tspan x="25" dy="18" class="gray">Please deploy your own instance</tspan>
    </text>
    </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=36000, s-maxage=36000, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/wakatime contract > should match the public happy-path response snapshot 1`] = `
{
  "content": "<svg width="495" height="195" viewBox="0 0 495 195" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="descId">
        <title id="titleId"/>
        <desc id="descId"/>
        <style>
          .header {
            font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
            fill: #2f80ed;
            animation: fadeInAnimation 0.8s ease-in-out forwards;
          }
          @supports(-moz-appearance: auto) {
            /* Selector detects Firefox */
            .header { font-size: 15.5px; }
          }
          
    
    .stat {
      font: 600 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif; fill: #434d58;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat { font-size:12px; }
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    .not_bold { font-weight: 400 }
    .bold { font-weight: 700 }
  
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .lang-name { font: 400 11px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    #rect-mask rect{
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress{
      animation: growWidthAnimation 0.6s ease-in-out forwards;
    }
    

          
      /* Animations */
      @keyframes scaleInAnimation {
        from {
          transform: translate(-5px, 5px) scale(0);
        }
        to {
          transform: translate(-5px, 5px) scale(1);
        }
      }
      @keyframes fadeInAnimation {
        from {
          opacity: 0;
        }
        to {
          opacity: 1;
        }
      }
    
          
        </style>

        

        <rect data-testid="card-bg" x="0.5" y="0.5" rx="4.5" height="99%" stroke="#e4e2e2" width="494" fill="#fffefe" stroke-opacity="1"/>

        
      <g data-testid="card-title" transform="translate(25, 35)">
        <g transform="translate(0, 0)">
      <text x="0" y="0" class="header" data-testid="header">WakaTime Stats (last 7 days)</text>
    </g>
      </g>
    

        <g data-testid="main-card-body" transform="translate(0, 55)">
          
    <svg x="0" y="0" width="100%">
      <g transform="translate(0, 0)">
    <g class="stagger" style="animation-delay: 450ms" transform="translate(25, 0)">
      <text class="stat bold" y="12.5" data-testid="TypeScript">TypeScript:</text>
      <text class="stat" x="350" y="12.5">12 hrs</text>
      
    <svg width="220" x="110" y="4">
      <rect data-testid="progress-background" rx="5" ry="5" x="0" y="0" width="220" height="8" fill="#434d58"/>
      <svg data-testid="lang-progress" width="52%">
        <rect height="8" fill="#2f80ed" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 750ms;"/>
      </svg>
    </svg>
  
    </g>
  </g><g transform="translate(0, 25)">
    <g class="stagger" style="animation-delay: 600ms" transform="translate(25, 0)">
      <text class="stat bold" y="12.5" data-testid="JavaScript">JavaScript:</text>
      <text class="stat" x="350" y="12.5">6 hrs 30 mins</text>
      
    <svg width="220" x="110" y="4">
      <rect data-testid="progress-background" rx="5" ry="5" x="0" y="0" width="220" height="8" fill="#434d58"/>
      <svg data-testid="lang-progress" width="28%">
        <rect height="8" fill="#2f80ed" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 900ms;"/>
      </svg>
    </svg>
  
    </g>
  </g><g transform="translate(0, 50)">
    <g class="stagger" style="animation-delay: 750ms" transform="translate(25, 0)">
      <text class="stat bold" y="12.5" data-testid="Other">Other:</text>
      <text class="stat" x="350" y="12.5">3 hrs</text>
      
    <svg width="220" x="110" y="4">
      <rect data-testid="progress-background" rx="5" ry="5" x="0" y="0" width="220" height="8" fill="#434d58"/>
      <svg data-testid="lang-progress" width="13%">
        <rect height="8" fill="#2f80ed" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 1050ms;"/>
      </svg>
    </svg>
  
    </g>
  </g><g transform="translate(0, 75)">
    <g class="stagger" style="animation-delay: 900ms" transform="translate(25, 0)">
      <text class="stat bold" y="12.5" data-testid="YAML">YAML:</text>
      <text class="stat" x="350" y="12.5">1 hr</text>
      
    <svg width="220" x="110" y="4">
      <rect data-testid="progress-background" rx="5" ry="5" x="0" y="0" width="220" height="8" fill="#434d58"/>
      <svg data-testid="lang-progress" width="4%">
        <rect height="8" fill="#2f80ed" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 1200ms;"/>
      </svg>
    </svg>
  
    </g>
  </g><g transform="translate(0, 100)">
    <g class="stagger" style="animation-delay: 1050ms" transform="translate(25, 0)">
      <text class="stat bold" y="12.5" data-testid="JSON">JSON:</text>
      <text class="stat" x="350" y="12.5">30 mins</text>
      
    <svg width="220" x="110" y="4">
      <rect data-testid="progress-background" rx="5" ry="5" x="0" y="0" width="220" height="8" fill="#434d58"/>
      <svg data-testid="lang-progress" width="3%">
        <rect height="8" fill="#2f80ed" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 1350ms;"/>
      </svg>
    </svg>
  
    </g>
  </g>
    </svg>
  
        </g>
      </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=36000, s-maxage=36000, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/wakatime contract > should match the public inaccessible-profile response snapshot 1`] = `
{
  "content": "<svg width="495" height="150" viewBox="0 0 495 150" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="descId">
        <title id="titleId"/>
        <desc id="descId"/>
        <style>
          .header {
            font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
            fill: #2f80ed;
            animation: fadeInAnimation 0.8s ease-in-out forwards;
          }
          @supports(-moz-appearance: auto) {
            /* Selector detects Firefox */
            .header { font-size: 15.5px; }
          }
          
    
    .stat {
      font: 600 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif; fill: #434d58;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat { font-size:12px; }
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    .not_bold { font-weight: 400 }
    .bold { font-weight: 700 }
  
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .lang-name { font: 400 11px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    #rect-mask rect{
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress{
      animation: growWidthAnimation 0.6s ease-in-out forwards;
    }
    

          
      /* Animations */
      @keyframes scaleInAnimation {
        from {
          transform: translate(-5px, 5px) scale(0);
        }
        to {
          transform: translate(-5px, 5px) scale(1);
        }
      }
      @keyframes fadeInAnimation {
        from {
          opacity: 0;
        }
        to {
          opacity: 1;
        }
      }
    
          
        </style>

        

        <rect data-testid="card-bg" x="0.5" y="0.5" rx="4.5" height="99%" stroke="#e4e2e2" width="494" fill="#fffefe" stroke-opacity="1"/>

        
      <g data-testid="card-title" transform="translate(25, 35)">
        <g transform="translate(0, 0)">
      <text x="0" y="0" class="header" data-testid="header">WakaTime Stats</text>
    </g>
      </g>
    

        <g data-testid="main-card-body" transform="translate(0, 55)">
          
    <svg x="0" y="0" width="100%">
      <g transform="translate(0, 0)">
    <text x="25" y="11" class="stat bold" fill="#434d58">WakaTime user profile not public</text>
  </g>
    </svg>
  
        </g>
      </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=36000, s-maxage=36000, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/wakatime contract > should match the public many-params response snapshot 1`] = `
{
  "content": "<svg width="620" height="140" viewBox="0 0 620 140" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="descId">
        <title id="titleId"/>
        <desc id="descId"/>
        <style>
          .header {
            font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
            fill: #123456;
            animation: fadeInAnimation 0.8s ease-in-out forwards;
          }
          @supports(-moz-appearance: auto) {
            /* Selector detects Firefox */
            .header { font-size: 15.5px; }
          }
          
    
    .stat {
      font: 600 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif; fill: #abcdef;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat { font-size:12px; }
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    .not_bold { font-weight: 400 }
    .bold { font-weight: 700 }
  
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .lang-name { font: 400 11px 'Segoe UI', Ubuntu, Sans-Serif; fill: #abcdef }
    #rect-mask rect{
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress{
      animation: growWidthAnimation 0.6s ease-in-out forwards;
    }
    

          
      /* Animations */
      @keyframes scaleInAnimation {
        from {
          transform: translate(-5px, 5px) scale(0);
        }
        to {
          transform: translate(-5px, 5px) scale(1);
        }
      }
      @keyframes fadeInAnimation {
        from {
          opacity: 0;
        }
        to {
          opacity: 1;
        }
      }
    
          * { animation-duration: 0s !important; animation-delay: 0s !important; }
        </style>

        

        <rect data-testid="card-bg" x="0.5" y="0.5" rx="12" height="99%" stroke="#fedcba" width="619" fill="#0f172a" stroke-opacity="1"/>

        
      <g data-testid="card-title" transform="translate(25, 35)">
        <g transform="translate(0, 0)">
      <text x="0" y="0" class="header" data-testid="header">a custom title</text>
    </g>
      </g>
    

        <g data-testid="main-card-body" transform="translate(0, 55)">
          
    <svg x="0" y="0" width="100%">
      
      <mask id="rect-mask">
      <rect x="25" y="0" width="565" height="8" fill="white" rx="5"/>
      </mask>
      
          <rect mask="url(#rect-mask)" data-testid="lang-progress" x="0" y="0" width="365.09200000000004" height="8" fill="#3178c6"/>
        
          <rect mask="url(#rect-mask)" data-testid="lang-progress" x="365.09200000000004" y="0" width="196.588" height="8" fill="#f1e05a"/>
        
          <rect mask="url(#rect-mask)" data-testid="lang-progress" x="561.6800000000001" y="0" width="28.084" height="8" fill="#cb171e"/>
        
      
    <g transform="translate(25, 25)">
      <circle cx="5" cy="6" r="5" fill="#3178c6"/>
      <text data-testid="lang-name" x="15" y="10" class="lang-name">
        TypeScript - 61.88 %
      </text>
    </g>
  
    <g transform="translate(292.5, 25)">
      <circle cx="5" cy="6" r="5" fill="#f1e05a"/>
      <text data-testid="lang-name" x="15" y="10" class="lang-name">
        JavaScript - 33.32 %
      </text>
    </g>
  
    <g transform="translate(25, 50)">
      <circle cx="5" cy="6" r="5" fill="#cb171e"/>
      <text data-testid="lang-name" x="15" y="10" class="lang-name">
        YAML - 4.76 %
      </text>
    </g>
  
    
    </svg>
  
        </g>
      </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=36000, s-maxage=36000, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/wakatime contract > should match the public missing-username response snapshot 1`] = `
{
  "content": "<svg width="576.5" height="120" viewBox="0 0 576.5 120" fill="#fffefe" xmlns="http://www.w3.org/2000/svg">
    <style>
    .text { font: 600 16px 'Segoe UI', Ubuntu, Sans-Serif; fill: #2f80ed }
    .small { font: 600 12px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    .gray { fill: #858585 }
    </style>
    <rect x="0.5" y="0.5" width="575.5" height="99%" rx="4.5" fill="#fffefe" stroke="#e4e2e2"/>
    <text x="25" y="45" class="text">Something went wrong!</text>
    <text data-testid="message" x="25" y="55" class="text small">
      <tspan x="25" dy="18">Missing params "username" make sure you pass the parameters in URL</tspan>
      <tspan x="25" dy="18" class="gray"/>
    </text>
    </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=600, s-maxage=600, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/wakatime contract > should render error card in same theme as requested card 1`] = `
{
  "content": "<svg width="576.5" height="120" viewBox="0 0 576.5 120" fill="#0a0f0b" xmlns="http://www.w3.org/2000/svg">
    <style>
    .text { font: 600 16px 'Segoe UI', Ubuntu, Sans-Serif; fill: #abd200 }
    .small { font: 600 12px 'Segoe UI', Ubuntu, Sans-Serif; fill: #68b587 }
    .gray { fill: #858585 }
    </style>
    <rect x="0.5" y="0.5" width="575.5" height="99%" rx="4.5" fill="#0a0f0b" stroke="#e4e2e2"/>
    <text x="25" y="45" class="text">Something went wrong!</text>
    <text data-testid="message" x="25" y="55" class="text small">
      <tspan x="25" dy="18">Missing params "username" make sure you pass the parameters in URL</tspan>
      <tspan x="25" dy="18" class="gray"/>
    </text>
    </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=600, s-maxage=600, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;
